alignment fixing

--- a/src/PhishingPortal/PhishingPortal.UI.Blazor/wwwroot/css/settingPage.css
+++ b/src/PhishingPortal/PhishingPortal.UI.Blazor/wwwroot/css/settingPage.css
@@ -292,4 +292,6 @@
         display: none;
     }
 }
-
+.close {
+    opacity:0.8;
+}
